--- a/package.json
+++ b/package.json
@@ -3,28 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/core": "^2.6.0",
-    "@date-io/date-fns": "v1",
-    "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "date-fns": "^2.14.0",
-    "moment": "^2.27.0",
     "history": "^4.10.1",
-    "latest-version": "^5.1.0",
-    "material-table": "^1.62.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-player": "^2.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "typescript": "^3.9.5"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
